Integration test fixes.